--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 <body>
     <h1>Hello there</h1>
     <p>some changes</p>
+    <form>
+        <label for="email">Email</label>
+        <input type="email" placeholder="Enter your email" />
+        <label for="password">Password</label>
+        <input type="password" placeholder="Enter your password"/>
+        <button>Submit</button>
+    </form>
 </body>
 </html>
