--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Hello there</h1>
     <p>some changes</p>
     <form>
-        <label for="email">Email</label>
-        <input type="email" placeholder="Enter your email" />
-        <label for="password">Password</label>
-        <input type="password" placeholder="Enter your password"/>
+        <label for="email">Email</label><br>
+        <input type="email" placeholder="Enter your email" /><br>
+        <label for="password">Password</label><br>
+        <input type="password" placeholder="Enter your password"/><br>
         <button>Submit</button>
     </form>
 </body>
