--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hello there</h1>
     <p>some changes</p>
-    <form>
+    <form class="form">
         <label for="email">Email</label><br>
         <input type="email" placeholder="Enter your email" /><br>
         <label for="password">Password</label><br>
